<resources>
    <string name="app_name">SITC</string>

    <string name="actionNew">New</string>
    <string name="actionSettings">Settings</string>
    <string name="actionSearch">Search</string>
    <string name="paint">Paint</string>
    <string name="plant">Plant</string>
    <string name="play">Play</string>

    <string name="signInWithFacebook">Sign in with Facebook</string>
    <string name="signInWithTwitter">Sign in with Twitter</string>
    <string name="signInWithGooglePlus">Sign in with Google+</string>
    <string name="signInWithEmail">Sign in with Email</string>

    <string-array name="carpoolSites">
        <item>Bloomfield Hills</item>
        <item>Dearborn</item>
        <item>Grosse Pointe</item>
    </string-array>

    <string name="googleMapsUrlBlank">http://maps.google.com/</string>
    <string name="googleMapsUrlFromAddress">http://maps.google.com/maps?saddr=%1$s&amp;daddr=%2$s,%3$s</string>
    <string name="googleMapsUrlFromCoordinates">http://maps.google.com/maps?saddr=%1$s,%2$s&amp;daddr=%3$s,%4$s</string>

    <string name="directionsDialogTitle">Get directions from:</string>
    <string-array name="directionsDialogItems">
        <item>My current location</item>
        <item>My primary carpool site</item>
        <item>Just take me to Google Maps</item>
    </string-array>

    <string-array name="facebookPermissions">
        <item>basic_info</item>
        <item>email</item>
        <item>user_about_me</item>
        <item>user_birthday</item>
        <item>user_education_history</item>
        <item>user_hometown</item>
        <item>user_location</item>
        <item>read_friendlists</item>
    </string-array>

    <!-- hints -->
    <string name="firstNameHint">First Name (required)</string>
    <string name="lastNameHint">Last Name (required)</string>
    <string name="usernameHint">Username (required)</string>
    <string name="emailHint">Email (required)</string>
    <string name="passwordHint">Password (required)</string>

    <!-- form validation -->
    <string name="thatShitEmpty">Yo, that shit empty. Fix it.</string>
    <string name="dateOfBirth">Date of birth (required)</string>
    <string name="phoneNumber">Phone number (required)</string>
    <string name="next">Next</string>
    <string name="error_first_name">First name is required</string>
    <string name="error_last_name">Last name is required</string>
    <string name="error_date_of_birth">Birthday is required</string>
    <string name="error_phone">Phone number is required</string>
    <string name="error_phone_valid">Not a valid phone number</string>
    <string name="error_username">Username is required</string>
    <string name="error_email">Email is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_password_length">Password must be at least 6 characters long</string>
    <string name="error_email_valid">Not a valid email address</string>
</resources>
