<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom">

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/facebookBlue"
        android:textColor="@android:color/white"
        android:text="@string/signInWithFacebook"/>

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/twitterBlue"
        android:textColor="@android:color/white"
        android:text="@string/signInWithTwitter"/>

    <Button
        android:id="@+id/googlePlusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/googlePlusRed"
        android:textColor="@android:color/white"
        android:text="@string/signInWithGooglePlus"/>

    <Button
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/signInWithEmail"/>

</LinearLayout>